react prod commit

--- a/openresty/conf/app/nginx.conf
+++ b/openresty/conf/app/nginx.conf
@@ -33,7 +33,7 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       82;
         server_name  localhost;
 
         #charset koi8-r;
@@ -77,31 +77,31 @@ http {
         #    deny  all;
         #}
     }
-
-    server {
-		listen      7000;
-        listen      7443 ssl;
-
-		server_name $hostname localhost;
-        default_type text/html;
-        port_in_redirect off;
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        include ext.conf;
-    }
-
-    server {
-        listen      4080;
-        
-        server_name $hostname localhost;
-        default_type text/html;
-            
-        include int.conf;
-    }
+#
+#    server {
+#		listen      7000;
+#       listen      7443 ssl;
+#
+#		server_name $hostname localhost;
+#        default_type text/html;
+#        port_in_redirect off;
+#
+#        error_page   500 502 503 504  /50x.html;
+#        location = /50x.html {
+#            root   html;
+#        }
+#
+#        include ext.conf;
+#    }
+#
+#    server {
+#        listen      4080;
+#        
+#        server_name $hostname localhost;
+#        default_type text/html;
+#            
+#        include int.conf;
+#    }
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
     #server {
