--- a/package.json
+++ b/package.json
@@ -17,17 +17,53 @@
   },
   "homepage": "https://github.com/MyManMitras/finance#readme",
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^7.3.0",
+    "css-loader": "^0.26.1",
+    "factor-bundle": "^2.5.0",
+    "file-loader": "^0.11.1",
+    "font-loader": "^0.1.2",
     "grunt": "^1.0.1",
     "grunt-artifactory-artifact": "^1.0.0",
+    "grunt-babel": "^6.0.0",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-curl": "^2.2.0",
     "grunt-exec": "^0.4.7",
     "grunt-mkdir": "^1.0.0",
     "grunt-subgrunt": "^1.2.0",
-    "grunt-zip": "^0.17.1"
+    "grunt-zip": "^0.17.1",
+    "minifyify": "^7.3.5",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-each": "^0.9.3",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
+    "postcss-mixins": "^5.4.1",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "babel-preset-node6": "^11.0.0",
+    "belle": "^3.0.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-dom": "^15.4.2",
+    "react-toolbox": "^2.0.0-beta.8",
+    "scssify": "^2.2.1"
   }
 }
