--- a/services/base-service/pom.xml
+++ b/services/base-service/pom.xml
@@ -26,8 +26,7 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <!-- Hibernate for JPA -->
         <dependency>
@@ -38,6 +37,12 @@
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>9.4-1206-jdbc42</version>
+    		<scope>runtime</scope>
 		</dependency>
 
     </dependencies>
