--- a/services/base-service/pom.xml
+++ b/services/base-service/pom.xml
@@ -45,6 +45,11 @@
     		<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${app.version}-SNAPSHOT</finalName>
