--- a/services/base-service/src/main/resources/application.properties
+++ b/services/base-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost/TestDB
 spring.datasource.username=admin
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
