--- a/services/base-service/src/main/resources/application.properties
+++ b/services/base-service/src/main/resources/application.properties
@@ -1,5 +1,18 @@
+superUser.email=sanjayswamy2017@gmail.com
+
 spring.datasource.url=jdbc:postgresql://localhost/TestDB
 spring.datasource.username=admin
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.redis.host=127.0.0.1
+spring.redis.password=
+spring.redis.port=6379
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=MyManMitras@gmail.com
+spring.mail.password=MyMan@Mitras
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
