--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-toolbox": "^2.0.0-beta.8",
