--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^15.5.4",
